<resources>
    <string name="app_name2">My Application</string>
    <string name="facebook_app_id" translatable="false">752568681483147</string>
    <string name="facebook_app_namespace" translatable="false">hotelnow_app</string>
    <string name="more_txt" translatable="false">전체보기</string>
    <string name="theme_more_txt" translatable="false">기획전 상품 더보기</string>
    <string name="error_need_login">로그인 후 이용 가능합니다.</string>
    <string name="error_try_again">정보를 확인 할 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_product_info">상품 정보를 확인 할 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_booking_info">예약 정보를 확인 할 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_theme_info">테마 리스트를 확인 할 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_booking_fail">예약을 완료하지 못했습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_event_apply">이벤트 정보를 확인 할 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_member_join">가입 처리가 완료되지 않았습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_event_complete">이벤트 응모 처리가 완료되지 않았습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_connect_problem">접속이 원활하지 않습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_no_product">판매 종료된 상품입니다. 상품 리스트를 새로고침 합니다.</string>
    <string name="error_hotel_location">호텔 위치를 확인 할 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_ticket_location">티캣 위치를 확인 할 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_near_hotel_location">일시적으로 주변 호텔을 확인 할 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_capcha_img">캡챠 이미지를 읽어올 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_reserve_money">포인트 정보를 읽어올 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_coupon_money">쿠폰 정보를 읽어올 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_review_regist">리뷰 등록에 실패했습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="booking_hide_success">예약내역을 삭제하였습니다.</string>
    <string name="booking_hide">삭제</string>
    <string name="booking_hide_cancel">취소</string>
    <string name="not_recent_search">최근 검색내역이 없습니다.</string>
    <string name="cancel_rule">취소규정 안내</string>
    <string name="agree">동의</string>
    <string name="not_agree">동의안함</string>
    <string name="banner">베너</string>
    <string name="small_banner">작은배너</string>
    <string name="keyword">인기 키워드</string>
    <string name="recent">최근 본 상품</string>
    <string name="hotdeal_hotel">NOW핫딜 숙소</string>
    <string name="hotdeal_activity">NOW핫딜 액티비티</string>
    <string name="promotion">제목 받아서</string>
    <string name="theme_special">호텔나우 추천 테마</string>
    <string name="ask_write_review">호텔나우 앱의 리뷰를 작성하러 가시겠습니까?</string>
    <string name="ask_new_version1">호텔나우 새 버전이 나왔습니다.\n구글 플레이로 이동합니다.</string>
    <string name="ask_new_version2">호텔나우 새 버전이 나왔습니다.\n업데이트를 하시겠습니까?</string>
    <string name="ask_new_version3">더욱 편리한 사용을 위해 새 버전을 출시했습니다.\n지금 업데이트 하세요!</string>
    <string name="ask_use_location">주변에 위치한 업체 검색 및 거리 표시를 위해 위치 정보 이용에 동의해 주세요.</string>
    <string name="need_login_go_main">로그아웃 상태이므로 평가를 완료할 수 없습니다.\n리스트로 이동합니다.</string>
    <string name="alert_notice_update">업데이트 알림</string>
    <string name="alert_close">닫기</string>
    <string name="alert_notice">알림</string>
    <string name="alert_account_msg">인터넷뱅킹을 이용해 입금자명[%1$s]으로 입력해 주시면, (%2$s)님 이름으로 실시간 예약이 완료됩니다.\n\n입금기한: %3$s 까지</string>
    <string name="review_save_title">리뷰 작성은 숙박 후 10일간만 가능하며,\n정상 등록시 포인트 500p가 바로 지급됩니다.</string>
    <string name="review_save_title2">리뷰 작성은 구매 티켓 사용 일 이후 10일간만 가능합니다.</string>
    <string name="alert_yes">예</string>
    <string name="alert_no">아니오</string>
    <string name="wanna_logout">로그아웃 하시겠습니까?</string>
    <string name="need_caution_agree">주의사항 및 개인정보 제3자 제공 동의는 필수항목입니다.</string>
    <string name="booking_hide_ask">예약내역을 삭제하시면 복구할 수 없습니다.\n그래도 삭제하시겠습니까?</string>
    <string name="booking_receipt_ask">영수증 확인 페이지로 연결하시겠습니까?</string>
    <string name="cant_use_map">지도를 사용할 수 없습니다.</string>
    <string name="booking_kimkisa_ask">카카오내비로 길안내를 받으시겠습니까?</string>
    <string name="not_support_device">지도보기를 지원하지 않는 기기입니다.</string>
    <string name="booking_review_hint">여러분이 남겨주신 객관적이고 솔직한 평가는 다른 고객들의 선택에 큰 도움이 될 수 있습니다.\n\n여러분의 경험을 공유해주세요.\n(10자 이상)</string>
    <string name="review_ynj_hn_msg">허위 사실이나 비속어, 욕설이 포함된 글은 운영자에 의해 강제 삭제 될 수 있습니다.\n작성된 리뷰는 호텔나우 제휴(야놀자, 야놀자펜션, 가자고) 채널에서 노출 될 수 있습니다. 고객님의 이름은 직접 노출되지 않으며, 평가 점수와 내용이 보여집니다.</string>
    <string name="need_review_msg">내용을 입력해 주세요.</string>
    <string name="need_review_msg2">텍스트 리뷰를 10자 이상 작성해주세요.</string>
    <string name="need_review_msg3">별점을 선택하여 주십시요.</string>
    <string name="companyinfo_txt1">\n(주)야놀자   |   대표자 이수진\n\n서울특별시 강남구 테헤란로 108길 42(대치동, 엠디엠타워)\n사업자 번호 : 220-87-42885, 통신 판매업 신고 : 강남-14211호\n관광사업자 등록번호 : 제2016-31호\n대표전화 : 1670-6864, 이메일 : hotelnow@yanolja.com</string>
    <string name="term_title">이용약관</string>
    <string name="term_txt1">서비스 이용약관</string>
    <string name="term_txt2">개인정보 수집 이용</string>
    <string name="term_txt3">위치정보 이용약관</string>
    <string name="term_txt4">사업자 정보확인</string>
    <string name="term_txt1_sub">호텔나우 약관</string>
    <string name="search_hint">지역, 상품명을 입력해주세요.</string>
    <string name="search_location_go">내 주변 바로보기</string>
    <string name="search_recent_title">최근 검색어</string>
    <string name="search_popular_title">요즘 뜨는 검색 키워드</string>
    <string name="search_hotel_activity">추천 숙소 &amp; 액티비티</string>
    <string name="search_hotel">추천 숙소</string>
    <string name="search_activity">추천 액티비티</string>
    <string name="all_clear">전체 삭제</string>
    <string name="area_title">지역선택</string>
    <string name="alert_confrim">확인</string>
    <string name="area_not_select">원하시는 지역을 선택해주세요</string>
    <string name="area_one_month">최근 1개월간 조회한 지역</string>
    <string name="re_search">재검색</string>
    <string name="filter_title">필터 &amp; 정렬</string>
    <string name="filter_sub_title1">정렬</string>
    <string name="filter_sub_title2">호텔 등급 및 그 외 유형</string>
    <string name="filter_sub_title3">투숙 인원</string>
    <string name="filter_sub_title4">객실 가격 선택</string>
    <string name="filter_sub_title5">리뷰 평점</string>
    <string name="filter_sub_title6">객실 부대 시설</string>
    <string name="filter_activity_sub_title">액티비티 테마</string>
    <string name="filter_select_title">테마 선택</string>
    <string name="detail_private_title">프라이빗딜</string>
    <string name="detail_hotdeal_title">단독핫딜</string>
    <string name="detail_add_title">추가적립</string>
    <string name="detail_checkin_title">체크인</string>
    <string name="detail_checkout_title">체크아웃</string>
    <string name="review_title">리뷰</string>
    <string name="special_title">/ 호텔나우만의 특별한 혜택 /</string>
    <string name="btn_private">가격 제안</string>
    <string name="btn_reservation">예약하기</string>
    <string name="btn_reservation_detail">예약 </string>
    <string name="btn_more">상세 정보 닫기</string>
    <string name="btn_more2">상세 정보 보기</string>
    <string name="btn_close">닫기</string>
    <string name="recommend_title">추천이유</string>
    <string name="recommend_input_title">추천인 코드 입력</string>
    <string name="signup_success">호텔나우에 가입해주셔서 감사합니다!\n [호텔나우]</string>
    <string name="recommend_hint">추천인 코드를 입력해주세요.</string>
    <string name="more_title">더보기</string>
    <string name="more_close_title">접기</string>
    <string name="detail_facility_title">편의시설 및 서비스</string>
    <string name="detail_address_title">주소 및 위치</string>
    <string name="detail_address_copy">주소복사</string>
    <string name="detail_address_near">주변호텔보기</string>
    <string name="detail_room_select">객실 선택하기</string>
    <string name="detail_activity_select">구매하기</string>
    <string name="calendar_complate">선택 완료</string>
    <string name="reservation_title">예약하기</string>
    <string name="reservation_user_info_title">예약자 정보</string>
    <string name="reservation_user_info_title2">예약 정보</string>
    <string name="reservation_user_discount_title">할인 정보</string>
    <string name="reservation_user_price_title">가격 정보</string>
    <string name="reservation_pay_title">결제방식</string>
    <string name="reservation_payinfo_title">결제 정보</string>
    <string name="reservation_private">프라이빗딜 추가 할인</string>
    <string name="reservation_point">포인트</string>
    <string name="reservation_coupon">사용가능쿠폰</string>
    <string name="reservation_point_total"><u>전액사용</u></string>
    <string name="reservation_point_total_cancel"><u>전액취소</u></string>
    <string name="reservation_price">예약금액</string>
    <string name="reservation_discount_price">할인금액</string>
    <string name="reservation_sale_price">총 결제금액</string>
    <string name="reservation_money">구매 보상</string>
    <string name="reservation_sale_price_info">* 세금 및 봉사료가 모두 포함된 금액입니다</string>
    <string name="name">이름</string>
    <string name="name_hint">체크인 시 필요항목입니다</string>
    <string name="contects">연락처</string>
    <string name="email">이메일</string>
    <string name="paytype0">간편결제</string>
    <string name="paytype0_info_title">간편결제란?</string>
    <string name="paytype0_info_message"><font fgcolor="#4d267f">최초 1회 카드 등록</font> 후 결제하시면 이후 구매부터는 서명 한번으로 편하게 결제하실 수 있는 결제수단입니다\n\n 내정보에서 카드를 등록하여 사용하세요</string>
    <string name="paytype3_info_message">법인, 일반 카드 결제 가능 (해외카드 제외)</string>
    <string name="paytype1">신용카드</string>
    <string name="paytype2">휴대폰결제</string>
    <string name="paytype3">ARS 결제</string>
    <string name="paytype4">가상계좌</string>
    <string name="paytype5">PAYCO</string>
    <string name="fee_title">주의사항 및 취소규정</string>
    <string name="caution_agreement_checkbox">주의사항 및 개인정보 제 3자 제공 동의</string>
    <string name="caution_agreement_view"><u>내용보기</u></string>
    <string name="map_detail"><u>상세보기</u></string>
    <string name="map_detail2"><u>상세보기</u></string>
    <string name="signup_recommend_success">회원가입 및 포인트 지급이 완료되었습니다.</string>
    <string name="reservation_ok">결제하기</string>
    <string name="mypage_title">내정보</string>
    <string name="mypage_not_join">아직 회원이 아니신가요?</string>
    <string name="mypage_not_join2">지금 회원가입하고, 호텔나우만의 특별한 혜택을 만나보세요!</string>
    <string name="mypage_not_sub_join">모든 숙소 예약 시 구매 포인트 제공</string>
    <string name="mypage_not_sub_join2">최대 60% 추가 할인  프라이빗딜</string>
    <string name="mypage_not_sub_join3">관심 상품 특가 알림 서비스</string>
    <string name="mypage_join">회원가입</string>
    <string name="mypage_login">로그인</string>
    <string name="cs_title">고객지원</string>
    <string name="cs_txt1">공지사항</string>
    <string name="cs_txt2">이메일로 의견보내기</string>
    <string name="cs_txt3">고객센터</string>
    <string name="cs_txt4"><u>카카오톡 문의</u></string>
    <string name="cs_txt5"><u>전화 문의</u></string>
    <string name="cs_faq">자주 하는 질문</string>
    <string name="service_txt2">알림메시지 받기</string>
    <string name="service_txt3">공지 / 예약내역 / 이벤트 / 특가 소식 등 알림 메시지를 통해 전달해드립니다</string>
    <string name="appinfo_txt1">앱 버전 정보</string>
    <string name="retire_txt1">회원탈퇴</string>
    <string name="notice">공지사항</string>
    <string name="no_email_program">email을 전송 할 수 있는 프로그램이 없습니다.</string>
    <string name="wanna_call_hotelnow">궁금하신 사항을 호텔나우에 문의하세요.</string>
    <string name="wanna_kakao_hotelnow">궁금하신 사항을 카카오톡으로 상담하세요.</string>
    <string name="alert_connect">연결하기</string>
    <string name="logout"><u>로그아웃</u></string>
    <string name="disable_money">소멸 예정</string>
    <string name="disable_coupon">마감 임박</string>
    <string name="coupon">쿠폰</string>
    <string name="card">결제카드</string>
    <string name="card_manager">결제카드 관리</string>
    <string name="save_title">포인트 내역</string>
    <string name="save_subtitle">적립 / 사용</string>
    <string name="coupon_title">쿠폰함</string>
    <string name="login_title">로그인</string>
    <string name="login_email">이메일 주소</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_sns">SNS계정으로 로그인</string>
    <string name="login_kakao">카카오</string>
    <string name="login_facebook">페이스북</string>
    <string name="login_not_user"><u>비회원 예약하기 ></u></string>
    <string name="login_find_pass"><u>비밀번호 찾기</u></string>
    <string name="login_join">회원가입</string>
</resources>