<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="mypage"
            type="com.hotelnow.fragment.mypage.MypageFragment" />
    </data>

    <RelativeLayout
        android:id="@+id/rl_not_join"
        android:layout_width="match_parent"
        android:layout_height="264dp">

        <ImageView
            android:layout_width="190dp"
            android:layout_height="170dp"
            android:background="@drawable/img_my_top"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="31dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/blacktxt"
                android:text="@string/mypage_not_join"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/blacktxt"
                android:text="@string/mypage_not_join2"/>

            <TextView
                android:id="@+id/sub_join_title1"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_marginTop="16dp"
                android:textSize="12dp"
                android:textColor="@color/blacktxt"
                android:text="@string/mypage_not_sub_join"/>

            <TextView
                android:id="@+id/sub_join_title2"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:textSize="12dp"
                android:lineSpacingExtra="9dp"
                android:letterSpacing="-0.02"
                android:textColor="@color/blacktxt"
                android:text="@string/mypage_not_sub_join2"/>

            <TextView
                android:id="@+id/sub_join_title3"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:textSize="12dp"
                android:textColor="@color/blacktxt"
                android:text="@string/mypage_not_sub_join3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="25dp">

            <Button
                android:id="@+id/bt_join"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:textSize="13dp"
                android:textColor="@color/purple"
                android:text="@string/mypage_join"
                android:background="@drawable/purple_and_white_round"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:textSize="13dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:text="@string/mypage_login"
                android:background="@drawable/purple_4round"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </RelativeLayout>
</layout>