<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/style_dialog_confirm"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@android:style/TextAppearance.Medium"
            android:text="@string/recommend_input_title"
            android:layout_marginTop="20dp"
            android:textColor="@color/purple"/>

        <EditText
            android:id="@+id/recommend_code"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/style_edittext_gray_border"
            android:hint="@string/recommend_hint"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:maxLength="15"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/recommend_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:layout_marginBottom="15dp"
            android:textColor="@color/termtext"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/left"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".3"
                android:gravity="center"
                android:text="@string/alert_no"
                android:textColor="@color/termtext"
                android:textSize="13dp"
                android:background="@color/white"
                android:padding="17dp"/>

            <Button
                android:id="@+id/right"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/alert_yes"
                android:textColor="#ffffff"
                android:textSize="13dp"
                android:background="@drawable/purple_2round" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>