<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_centerVertical="true">
            <ImageView
                android:id="@+id/icon_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="12dp"
                android:background="@drawable/ico_titbar_back"
                android:layout_gravity="center"/>
        </LinearLayout>
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@+id/toolbar"
        android:scrollbars="none"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:textColor="@color/blacktxt"
                    android:text="@string/login_title"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/login_email"
                    android:textColorHint="@color/coupon_dis"
                    android:inputType="textEmailAddress"
                    android:textSize="17dp"
                    android:theme="@style/EditTheme"
                    android:textColor="@color/blacktxt" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:hint="@string/login_pw"
                    android:layout_marginTop="15dp"
                    android:textColorHint="@color/coupon_dis"
                    android:inputType="textPassword"
                    android:textSize="17dp"
                    android:maxLength="20"
                    android:theme="@style/EditTheme"
                    android:textColor="@color/blacktxt" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:background="@drawable/purple_round"
                    android:layout_marginTop="20dp"
                    android:id="@+id/bt_login"
                    android:text="@string/login_title"
                    style="?android:attr/borderlessButtonStyle"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="0.5"
                        android:layout_gravity="center"
                        android:background="@color/back_line"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/login_sns"
                        android:gravity="center"
                        android:textSize="14dp"
                        android:textColor="@color/graytxt"
                        android:layout_weight="1"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="@color/back_line"
                        android:layout_weight="0.5"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:id="@+id/btn_kakao"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginRight="5dp"
                        android:background="#fae102">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="12dp"
                            android:background="@drawable/ico_logo_kakao"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_kakao"
                            android:textSize="14dp"
                            android:textColor="#3b1e1e"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:background="#395a9a">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="12dp"
                            android:background="@drawable/ico_logo_facebook"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_facebook"
                            android:textSize="14dp"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/join_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="30dp"
                    android:layout_alignParentBottom="true">

                    <TextView
                        android:id="@+id/btn_resetpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/login_find_pass"
                        android:gravity="center"
                        android:textSize="14dp"
                        android:textColor="@color/termtext"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/bg_background"/>

                    <TextView
                        android:id="@+id/btn_nocookie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="14dp"
                        android:text="@string/login_not_user"
                        android:textColor="@color/purple"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_join"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:text="@string/login_join"
                    android:layout_above="@id/join_pw"
                    android:textSize="14dp"
                    android:textColor="@color/purple"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/purple_and_white_round"
                    style="?android:attr/borderlessButtonStyle"/>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>